Fixed spacing in mobile screen for home screen

--- a/frontend/src/containers/About/About.scss
+++ b/frontend/src/containers/About/About.scss
@@ -108,7 +108,7 @@
           text-fill-color: transparent;
 
           @media screen and (max-width: 768px) {
-            font-size: 3.2rem;
+            font-size: 2.5rem;
           }
         }
       }
@@ -119,6 +119,10 @@
           line-height: 1.2;
           color: var(--bg-black-color-contrast-3);
           opacity: 0.8;
+
+          @media screen and (max-width: 768px) {
+            font-size: 1rem;
+          }
         }
       }
 
