--- a/frontend/src/containers/Episodes/Episodes.scss
+++ b/frontend/src/containers/Episodes/Episodes.scss
@@ -192,6 +192,10 @@
     justify-content: center;
     gap: 2rem;
 
+    @media screen and (max-width: 768px) {
+      gap: 1rem;
+    }
+
     &-title,
     &-filter,
     &-cards__container {
@@ -240,6 +244,17 @@
       h2 {
         font-size: 4rem;
         font-weight: 700;
+      }
+
+      @media screen and (max-width: 768px) {
+        margin-top: 4rem;
+        display: flex;
+        justify-content: flex-start;
+        padding: 0;
+
+        h2 {
+          font-size: 2.5rem;
+        }
       }
     }
 
