--- a/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
+++ b/frontend/src/containers/EpisodesSlider/EpisodesSlider.scss
@@ -18,7 +18,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    padding: 6rem 0;
+    padding: 6rem 0 2rem 0;
     width: 90%;
     margin-top: 0;
   }
@@ -36,13 +36,13 @@
       font-weight: 700;
 
       @media screen and (max-width: 768px) {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
       }
     }
 
     @media screen and (max-width: 900px) {
       flex-direction: column;
-      gap: 2.5rem;
+      gap: 1.5rem;
       align-items: flex-start;
     }
   }
