--- a/frontend/src/containers/Home/Home.scss
+++ b/frontend/src/containers/Home/Home.scss
@@ -76,7 +76,7 @@
           }
 
           @media screen and (max-width: 860px) {
-            font-size: 0.7rem;
+            font-size: 0.9rem;
           }
         }
 
@@ -95,6 +95,7 @@
 
       @media screen and (max-height: 750px) {
         top: 20%;
+        width: 90%;
       }
     }
   }
