--- a/frontend/src/containers/Testimonials/Testimonials.scss
+++ b/frontend/src/containers/Testimonials/Testimonials.scss
@@ -17,7 +17,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    padding: 6rem 0;
+    padding: 4rem 0 2rem 0;
     width: 90%;
     margin-top: 0;
   }
@@ -35,9 +35,8 @@
     }
 
     @media screen and (max-width: 768px) {
-      font-size: 3.2rem;
+      font-size: 2.5rem;
       text-align: left;
-      font-size: 3rem;
     }
   }
 
@@ -65,6 +64,7 @@
       @media screen and (max-width: 768px) {
         overflow-x: scroll;
         gap: 1rem;
+        margin-top: 2.5rem;
       }
     }
 
